Closed Bug 248442 Opened 20 years ago Closed 20 years ago

Crash in form autocomplete (64-bit arch only)

Categories

(Firefox :: Address Bar, defect)

Other
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jst, Assigned: jst)

References

Details

(Keywords: 64bit, crash, Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

nsFormHistory.cpp calls NS_QuickSort() to sort an array of PRUint32s, but it
passes in sizeof(nsIMdbRow*) as the size of the items to sort. That happens to
work on 32-bit platforms, but not on 64-bit platforms where sizeof(nsIMdbRow*)
!= sizeof(PRUint32)... Patch coming up.
Attachment #151580 - Flags: superreview?(dbaron)
Attachment #151580 - Flags: review?(bugs)
Attachment #151580 - Flags: superreview?(dbaron) → superreview+
Comment on attachment 151580 [details] [diff] [review]
Pass in the correct size, and don't waste time sorting n' allocing when there's nothing to sort... (diff -w)

r=ben@mozilla.org
Attachment #151580 - Flags: review?(bugs) → review+
Fixed on trunk and aviary branch.
Status: NEW → RESOLVED
Closed: 20 years ago
Keywords: crash
Resolution: --- → FIXED
Whiteboard: fixed-aviary1.0
*** Bug 236792 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: