Fixing bug 248442. Fix incorrect item size argument that was passed to NS_QuickSort() which lead to a crash on platforms where sizeof(void *) != sizeof(PRUint32). r=ben@bengoodger.com, sr=dbaron@dbaron.org